Дописал стереоскопический режим

--- a/main.tex
+++ b/main.tex
@@ -138,6 +138,13 @@ r_g = \frac{p_{\bot}}{|q|B},
 \end{equation}
 где $p_{\bot}=\gamma m v_{\bot}$ --- перпендикулярная движению составляющая импульса частицы, $\gamma$ --- Лоренц-фактор частицы. Из-за воздействия магнитных полей становится практически невозможно получить информацию о процессах, происходящих с космическими лучами в их источниках и межзвёздном пространстве. Протон с энергией $E=10^{17}$~эВ при значении галактического магнитного поля $B=10^{-5}$~Гс будет иметь гирорадиус $r_g=$10~пк, что соразмерно с поперечными размерами галактики. Космические лучи с $E<10^{17}~$эВ не несут информации об источнике, где они родились. 
 \subsection{$\gamma$-кванты как источник информации}
+На сегодняшний день не решён вопрос  об источниках космических лучей, как внутригалактических, так и внегалактических. Продвижение в решении этого вопроса может произойти при обнаружении галактического источника космических лучей с энергиями $E\geq10^{15}$~эВ в пределах галактики, т.\,н. \textit{пэватрона}. В литературе для определения пэватрона используется два существенно разных определения:
+\begin{enumerate}
+\item Пэватрон --- ускоритель космических лучей до энергии 1~ПэВ.
+\item Пэватрон --- ускоритель частиц (адронов или лептонов) до энергии 1~ПэВ.
+\end{enumerate}
+
+Первое определение является более строгим, т.\,к. подразумевается объект, ускоряющий именно адроны. Однако для обоих определений характерна генерация $\gamma$-квантов сверхвысоких энергий ($E\geq100$~ТэВ). Таким образом, кандидат в ускорители космических лучей может быть обнаружен по $\gamma$-излучению свыше 100~ТэВ.
 В отличие от протонов $\gamma$-кванты не имеют заряда и распространяются по галактике без отклонения магнитным полем. Внутри галактики они возникают в остатках сверхновых (SNR), пульсарных туманностях (PWN, плерионы), пульсарах, двойных системах. 
 Основные механизмы рождения $\gamma$-квантов в этих источниках в диапазоне энергий от ГэВ~до~ТэВ связаны и с адронами космических лучей, и с электронами. Электроны участвуют в процессах обратного комптоновского рассеяния (IC) и тормозного излучения. Обратное комптоновское рассеяние происходит при взаимодействии высокоэнергичных электронов и мягких фотонов изотропного реликтового микроволнового фона. Тормозное излучение возникает в присутствии плотной среды, например, в молекулярных газовых облаках. В обоих процессах релятивистский электрон $e^-$ взаимодействует с мягким фотоном $\gamma_{soft}$, отдавая ему часть своей энергии. В результате электрон лишается части энергии ($e^{-*}$), а фотон переходит в гамма-диапазон:
 \begin{equation}
@@ -176,12 +183,11 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 Энергия вращения пульсаров теряется на генерацию ветра из ультрарелятивистских электронов и позитронов, впоследствии взаимодействующего со стоячей ударной волной. Область взаимодействия, постоянно подпитываемую электрон-позитронным ветром со стороны нейтронной звезды, называют \textit{пульсарной туманностью} (Pulsar Wind Nebula, PWN), или \textit{плерионом}.
 
 Вещество сброшенной оболочки звезды сталкивается с межзвёдной средой, и возникает ударная волна, на фронте которой ускоряются электроны, позитроны, протоны и ядра. Этот источник $\gamma$-квантов относят к классу остатков Сверхновых (Supernova remnant, SNR).
-
 \section{Черенковское излучение}
-Идея о том, что электрон, передвигаясь в прозрачной среде, будет вызывать излучение с коническим фронтом, была высказана ещё Оливером Хевисайдом (\textit{ссылка}).
-Позже, к аналогичным результатам (\textit{ссылка}) пришёл и Арнольд Зоммерфельд, делая расчёты движения заряда со скоростью выше скорости света в вакууме\footnote{Необходимо помнить, что в это время скорость света не считалась принципиальным пределом скорости тел. Более того, движение такого заряда в среде с оптическим показателем преломления $n$ давало решение, не противоречащее результатам СТО}. 
+Идея о том, что электрон, передвигаясь в прозрачной среде, будет вызывать излучение с коническим фронтом, была высказана ещё Оливером Хевисайдом \cite{heaviside1889xxxix}.
+Позже, к аналогичным результатам \cite{tyapkin1974first} пришёл и Арнольд Зоммерфельд, делая расчёты движения заряда со скоростью выше скорости света в вакууме\footnote{Необходимо помнить, что в это время скорость света не считалась принципиальным пределом скорости тел. Более того, движение такого заряда в среде с оптическим показателем преломления $n$ давало решение, не противоречащее результатам СТО}. 
 
-Первое упоминание голубого свечения в экспериментах наблюдалось в работах Марии Склодовской-Кюри (\textit{ссылка}), однако этому эффекту не было придано значение. Дж.\,Джелли указывает на то, что первыми систематическими наблюдениями этого эффекта можно считать исследования Маллета, проведённые ориентировочно в 1926--1928. (\textit{ссылка на Джелли}). Им был, в частности, обнаружен непрерывный спектр излучения, что противоречило предположению Кюри о люминисцентной природе явления, но ключевые свойства излучения, такие как поляризация и анизотропия, не были им установлены. 
+Первое упоминание голубого свечения в экспериментах наблюдалось в работах Марии Склодовской-Кюри \cite{mirzoyan2014brief}, однако этому эффекту не было придано значение. Дж.\,Джелли указывает на то, что первыми систематическими наблюдениями этого эффекта можно считать исследования Маллета, проведённые ориентировочно в 1926--1928. (\textit{ссылка на Джелли}). Им был, в частности, обнаружен непрерывный спектр излучения, что противоречило предположению Кюри о люминисцентной природе явления, но ключевые свойства излучения, такие как поляризация и анизотропия, не были им установлены. 
 
 П.\,А.~Черенков, будучи аспирантом С.\,И.~Вавилова, обнаружил неизвестное свечение голубоватого света в прозрачных жидкостях под воздействием $\gamma$-излучения солей урана в 1934~г (\textit{ссылка}). Позже, в 1937~г., в работе И.\,Е.~Тамма и И.\,М.~Франка (\textit{ссылка}) была объяснена природа явления, впоследствии названного излучением Вавилова-Черенкова. Согласно их теории, свет испускается средой, через которую проходит заряженная частица со скоростью, превышающей скорость света $v=c/n$ в данной среде (где $c$ — скорость света в вакууме, а $n$ --- коэффициент оптического преломления). 
 Дальнейшие эксперименты показали, что:
@@ -200,7 +206,7 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 
 \section{История развития черенковской гамма-астрономии}
 \subsection{Черенковское свечение атмосферы}
-В 1948~г. Патрик Блакетт оценил (\textit{ссылка}), что доля в $10^{-4}$ всего света в ночном небе может приходиться на черенковское свечение, возникающее в атмосферных ливнях, порождённых космическими лучами. В 1952~г. Гэлбрейт и Джелли создали установку (\textit{ссылка}), состоявшую из параболического зеркала диаметром 25~см и двух ФЭУ в фокусе зеркала. Раз в минуту <<телескоп>> срабатывал в совпадении с квадратным массивом из 16 счётчиков Гейгера-Мюллера, каждый из которых имел площадь 200~$\text{см}^2$. В результате эксперимента было установлено, что б\'ольшая часть срабатываний установки на световой импульс напрямую коррелирует с регистрацией частиц ШАЛ. Спустя год установка была усовершествована, а также стало возможным исследовать поляризацию света. Было обнаружено, что в регистрируемых вспышках преобладала синяя часть спектра, что также играло роль в пользу гипотезы о черенковском свечении атмосферы.  
+В 1948~г. Патрик Блакетт оценил (\textit{ссылка}), что доля в $10^{-4}$ всего света в ночном небе может приходиться на черенковское свечение, возникающее в атмосферных ливнях, порождённых космическими лучами. В 1952~г. Гэлбрейт и Джелли создали установку \cite{galbraith1953light}, состоявшую из параболического зеркала диаметром 25~см и двух ФЭУ в фокусе зеркала. Раз в минуту <<телескоп>> срабатывал в совпадении с квадратным массивом из 16 счётчиков Гейгера-Мюллера, каждый из которых имел площадь 200~$\text{см}^2$. В результате эксперимента было установлено, что б\'ольшая часть срабатываний установки на световой импульс напрямую коррелирует с регистрацией частиц ШАЛ. Спустя год установка была усовершествована, а также стало возможным исследовать поляризацию света. Было обнаружено, что в регистрируемых вспышках преобладала синяя часть спектра, что также играло роль в пользу гипотезы о черенковском свечении атмосферы.  
 
 В 1953--1955~гг командой под руководством А.\,Е.~Чудакова проводились систематические измерения пространственного распределения черенковского излучения в горах Памира на высоте около 3800~м над уровнем моря (\textit{ссылка}).
 
@@ -231,7 +237,6 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 В 1967~г. началось возведение конструкций телескопа на горе Mount Hopkins (штат Аризона) в обсерватории Whipple (2300~м над уровнем моря). Телескоп состоял из зеркала диаметром 10~м и камеры, в которой первоначально стоял один ФЭУ. Позже она становится многопиксельной камерой, количество ФЭУ в которой увеличивается до~10. На протяжении почти 20~лет на телескопе велись наблюдения 13 источников. В 1977~г. Тревор Уикс предлагает использовать для наблюдений два таких телескопа с 37~пикселями ФЭУ и находящихся на расстоянии 100~м друг от друга. Это предложение было своего рода отправной точкой для стереоскопического метода поиска гамма-сигнала. 
 
 Многопиксельные камеры позволяют регистрировать не только сам факт наличия черенковской вспышки в атмосфере, но и получать её изображение в виде проекции ливня. В 1985~г. Майкл Хиллас предлагает ввести параметризацию таких изображений, что также становится важной вехой в истории наземных черенковских гамма-телескопов. Благодаря этой параметризации на обсерватории Whipple удалось серьёзно подавить адронный фон, и в 1989~г. команда заявила о регистрации сигнала от Крабовидной туманности с рекордной значимостью $9\sigma$. Сигнал соответствовал потоку в~ $1.8\cdot10^{-11}~\frac{\text{фотонов}}{\text{с}\cdot\text{см}^2}$. 
-%Первым известным источником гамма-астрономии считается Крабовидная туманность, исследованная с помощью наземного черенковского телескопа Whipple в 1989 году (статья Weekes 1989). Телескоп состоял из зеркала диаметром 10 м и 37-пиксельной камеры с  ФЭУ. После подавления изображений , связанных с адронным фоном был обнаружен сигнал $\gamma$-квантов со значимостью $9\sigma,$ который 
 
 Спустя три года был открыт второй источник гамма-квантов сверхвысоких энергий: блазар Маркарян-421 в созвездии Большой Медведицы. В это же время проектами HEGRA и CANGAROO был подтверждён сигнал от Крабовидной туманности.
 
@@ -279,6 +284,7 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 	\label{pic:HAWCJ2019368Spectra}
 \end{figure}
 
+Таким образом, источник в туманности Dragonfly является одним из галактических источников со спектром, простирающимся выше $E=100$~ТэВ \cite{https://doi.org/10.48550/arxiv.2109.13753}. 	
 \chapter{Эксперимент TAIGA}
 \section{Основные сведения}
 \subsection{Географические сведения}
@@ -287,21 +293,28 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 
 Важно упомянуть о повышенной сейсмической активности региона в силу того, что он находится на глубинном разломе земной коры. Это негативно сказывается на работе прецизионной научной аппаратуры, однако за последние годы крупных разрушений не происходило.
 \subsection{Развёрнутые эксперименты}
-Тункинский астрофизический комплекс, в состав которого входит гамма-обсерватория TAIGA (\textit{Tunka Advanced Instrument for cosmic ray physics and Gamma Astronomy}), располагается в Тункинской долине вблизи села Торы на высоте 678~м над уровнем моря. С 1993~г. комплекс является центром изучения космических лучей сверхвысоких энергий с помощью метода ШАЛ. На полигоне была создана установка Тунка-25, с помощью которой были получены важные результаты по методике восстановления ШАЛ и по структуре спектра космических лучей в районе излома (\textit{ссылка}). В 2009~г. установка была расширена до 175 оптических станций, регистрирующих атмосферное черенковское излучение. 
+Тункинский астрофизический комплекс, в состав которого входит гамма-обсерватория TAIGA (\textit{Tunka Advanced Instrument for cosmic ray physics and Gamma Astronomy}), располагается в Тункинской долине вблизи села Торы на высоте 678~м над уровнем моря. С 1993~г. комплекс является центром изучения космических лучей сверхвысоких энергий с помощью метода ШАЛ. На полигоне была создана установка Тунка-25, с помощью которой были получены важные результаты по методике восстановления ШАЛ и по структуре спектра космических лучей в районе излома (\textit{ссылка}). В 2009~г. установка была расширена до 175 оптических станций, регистрирующих атмосферное черенковское излучение.
+
+ \begin{figure}[b]
+	\noindent\centering{
+		\includegraphics[width=0.6\textwidth]{figs/IACTLocations.png}
+	}
+	\caption{Размещение черенковских телескопов TAIGA-IACT.}
+	\label{pic:IACTLocations}
+\end{figure}
 
 С 2013~г. на полигоне ведётся строительство обсерватории TAIGA, в состав которой входят три телескопа TAIGA-IACT (\text{Imaging Atmospheric Cherenkov Telescope}), широкоугольная черенковская установка TAIGA-HiSCORE (\textit{High Sensivity COsmic Rays and gamma Explorer}), а также сцинтилляционная установка TAIGA-Muon.
 
 TAIGA-HiSCORE --- это сеть из 120~широкоугольных оптических детекторов, расположенных на площади~1{,}1~км$^\text{2}$ и объединённых в 4~кластера. Каждая оптическая станция представляет контейнер, в котором находятся 4 ФЭУ с диаметром фотокатода 20~см, оснащённые конусом Винстона с диаметром 40~см для увеличения площади светосбора и ограничения угла обзора. Поверх конусов находится защитное покрытие из плексигласа и нагревательная система для предотвращения конденсации влаги. Контейнер оборудован крышкой, защищающей оптическую систему от солнечного света, пыли и атмосферных осадков. Телесный угол обзора каждого телескопа составляет 0{,}6~стер. Сигналы с промежуточных динодов и анодов оцифровываются с разрешением 0{,}5~нс, после чего восстанавливаются параметры ШАЛ: направление прихода ШАЛ и энергия первичной частицы. 
-
 
 \section{Устройство телескопа TAIGA-IACT}
 \textit{
 Здесь будет описано устройство телескопа TAIGA-IACT, его физические характеристики, системы электроники камеры и обработки сигналов
 }
 \subsection{Физические характеристики}
-TAIGA-IACT представляет из себя атмосферный черенковский телескоп с альт-азимутальной подвижной платформой и параболическим отражателем с диаметром 4,3~м. Отражатель состоит из сферических зеркал и имеет общую площадь поверхности 8,5~$\text{м}^\text{2}$. Фокусное расстояние отражателя составляет 4,75~м, в фокальной плоскости на штангах размещена регистрирующая камера с электроникой и ФЭУ.  Каждый телескоп дополнительно оборудован ПЗС-камерой для отслеживания положения телескопа во время наблюдений (\textit{ссылка на статью Журова}). По периметру камеры установлены 8 светодиодов для определения положения камеры на изображениии с ПЗС-камеры. Подвижная платформа оборудована моторами, позволяющими повернуть телескоп по азимуту на $9\cdot10^{-4}~^{\circ}$ за один такт мотора. 
+TAIGA-IACT представляет из себя атмосферный черенковский телескоп с альт-азимутальной подвижной платформой и параболическим отражателем с диаметром 4,3~м. Отражатель состоит из сферических зеркал и имеет общую площадь поверхности 8{,}5~$\text{м}^\text{2}$. Фокусное расстояние отражателя составляет 4{,}75~м, в фокальной плоскости на штангах размещена регистрирующая камера с электроникой и ФЭУ.  Каждый телескоп дополнительно оборудован ПЗС-камерой для отслеживания положения телескопа во время наблюдений (\textit{ссылка на статью Журова}). По периметру камеры установлены 8 светодиодов для определения положения камеры на изображениии с ПЗС-камеры. Подвижная платформа оборудована моторами, позволяющими повернуть телескоп по азимуту на $9\cdot10^{-4}~^{\circ}$ за один такт мотора. 
 
-На момент апреля 2022~г. комплекс TAIGA включает в себя три телескопа TAIGA-IACT (IACT01, IACT02, IACT03), камеры каждого из которых имеют диаметр угла обзора 9{,}6$^{\circ}$. Телескопы установлены так, что образуют треугольник со сторонами 300~м, 400~м и 500~м. Матрицы камер состоят из 560, 600 и 600 пикселей ФЭУ соответственно, расположенных в шестигранной сетке. Каждый ФЭУ дополнительно оснащён конусом Винстона, повышающим эффективность светосбора. Угловой размер каждого пикселя составляет $0,\!36^{\circ}$. Пиксели сгруппированы в 22~кластера: центральные кластеры состоят из 28 пикселей, периферийные из 21 и 14. Управление и обработка сигналов ведётся с помощью 64-канальной микросхемы ASIC MAROC3. Каждая группа по 7 ФЭУ XP1911 в кластерах расположена на плате делителей высокого напряжения, которую обслуживает высоковольтный источник питания. 
+На момент апреля 2022~г. комплекс TAIGA включает в себя три телескопа TAIGA-IACT (IACT01, IACT02, IACT03), камеры каждого из которых имеют диаметр угла обзора 9{,}6$^{\circ}$. Телескопы установлены так, что образуют треугольник со сторонами 300~м, 400~м и 500~м (рис.~\ref{pic:IACTLocations}\afterpage{\clearpage}). Матрицы камер состоят из 560, 600 и 600 пикселей ФЭУ соответственно, расположенных в шестигранной сетке. Каждый ФЭУ дополнительно оснащён конусом Винстона, повышающим эффективность светосбора. Угловой размер каждого пикселя составляет $0,\!36^{\circ}$. Пиксели сгруппированы в 22~кластера: центральные кластеры состоят из 28 пикселей, периферийные из 21 и 14. Управление и обработка сигналов ведётся с помощью 64-канальной микросхемы ASIC MAROC3. Каждая группа по 7 ФЭУ XP1911 в кластерах расположена на плате делителей высокого напряжения, которую обслуживает высоковольтный источник питания. 
 
 Конструкция регистрирующей камеры разработана с учётом эксплуатации в условиях холодной сибирской зимы. Электроника помещена в теплоизолированный корпус с системой контроля температуры. Входное окно камеры, обращённое к параболическому отражателю, сделано из плексигласа с толщиной 14~мм, а его поверхность прогревается тёплым воздухом, также циркулирующим внутри корпуса. Камера в отсутствие наблюдения закрыта рольставнями.
 
@@ -368,6 +381,8 @@ N = \int^{E_2}_{E_1} J(E) S_{eff}(E)\tau dE \approx \sum^n_{i = 1} J_i S_i \tau.
 \end{equation}
 
 По этим оценкам можно заключить, что за 100~ч чистого наблюдения источника можно зарегистрировать не более 285~событий в диапазоне энергий 1--20~ТэВ и не более 68 событий с энергией 20--50~ТэВ.
+
+Расположение комплекса TAIGA позволяет вести наблюдение за источником с середины августа по начало декабря, что приблизительно соответствует 100~часам. 
 \chapter{Алгоритм случайного леса}
 \section{Задачи классификации и регрессии}
 \subsection{Постановка задачи}
@@ -432,16 +447,37 @@ S_{p}=A_{\text {АЦП }}-A_{P E D},
 Первым используемым параметром служит упомянутый выше \textit{size} --- суммарное число фотоэлектронов в событии. 
 В 1985~г. A.\,M.~Hillas предложил (\textit{ссылка на A. Hillas, “Cerenkov light images of EAS produced by primary gamma”}) способ параметризации изображений для IACT проекта Whipple. Изображение аппроксимируется эллипсом, центром которого является центр масс (первый момент двумерного распределения) сработавших пикселей. Длины полуосей эллипса обозначаются как \textit{width} и \textit{length}.
 
-Параллельно считывается информация из файлов слежения телескопа и определяется положение наблюдаемого источника в камере и  его зенитный и азимутальный углы \theta~ и \varphi ~на небе.  Группа событий, представляющая множество фоновых событий и предположительных гамма-событий от источника будет называться \textit{ON}-событиями. Выбирается положение <<антиисточника>> --- точки, относительно которой будет вестись набор статистики фоновых событий, в дальнейшем называемых \textit{OFF}-событиями. Обычно в роли антиисточника выступает центрально симметричная источнику точка, однако для повышения статистической значимости можно вести набор статистику относительно нескольких <<источников фона>>, о чём будет сказано далее.   
+Параллельно считывается информация из файлов слежения телескопа и определяется положение наблюдаемого источника в камере и  его зенитный и азимутальный углы \vartheta~ и \varphi ~на небе.  Группа событий, представляющая множество фоновых событий и предположительных гамма-событий от источника будет называться \textit{ON}-событиями. Выбирается положение <<антиисточника>> --- точки, относительно которой будет вестись набор статистики фоновых событий, в дальнейшем называемых \textit{OFF}-событиями. Обычно в роли антиисточника выступает центрально симметричная источнику точка, однако для повышения статистической значимости можно вести набор статистику относительно нескольких <<источников фона>>, о чём будет сказано далее.   
 
 Итак, следующим набором параметров Хилласа будут выступать \textit{dist$_{0}$, dist$_{ON}$,  dist$_{OFF}$}, представляющие расстояния от центра эллипса до центра камеры, до источника и до антиисточника соответственно. Не менее важными являются вспомогательные параметры $a$ и $b$, задающие прямую $y = ax + b$, на которой лежит главная ось эллипса. Угол поворота эллипса в камере определяется как $\arctan a$. Для наблюдений в монорежиме важны углы \textit{alpha$_{ON}$} и \textit{alpha$_{OFF}$}. \textit{alpha$_{ON}$} --- угол между главной осью эллипса и направлением на источник.  \textit{alpha$_{OFF}$} --- аналогично предыдущему параметру, только относительно антиисточника.
 \subsection{Моноскопический режим обработки}
 На вычисленные параметры Хилласа накладываются пороги, значение которых получается подбирается с помощью данных моделирования Монте-Карло. По оставшимся после порогов событиям строится распределение угла \textit{alpha} для \textit{ON}- и \textit{OFF}-выборок. В случае если есть избыток \textit{ON}-событий в диапазоне малых углов ($0^{\circ}-10^{\circ}$) над количеством \textit{OFF}-событий, вычисляется статистическая значимость избытка. 
 
-\textit{добавляем про формулу Li\&Ma}
+Статистическая значимость сигнала вычисляется по формуле Li\&Ma \cite{1983ApJ...272..317L}. Пусть $N_{on}$ --- количество событий, полученных вблизи источника (малые углы \textit{alpha$_{ON}$}), $N_{off}$ --- количество событий, полученных вблизи <<антиисточника>>, $\alpha = n_{signal}/n_{background}$ --- отношение количества каналов сигнала и фона, т.\,е. число, обратное числу <<источников>> фона. Если в качестве последнего используется зеркально симметричная источнику точка, $\alpha=1$. В число $N_{on}$ оказываются включенными как события от $\gamma$-квантов, так и фоновые адронные события, источники которых равномерно распределены по всей камере. Среднее число фоновых событий вблизи источника будет определяться как
+\begin{equation}
+\hat{N_B} = \alpha N_{off},
+\end{equation}
+а количество сигнальных событий (чисто от $\gamma$-квантов) определяется как 
+\begin{equation}
+\label{Nsignal}
+N_S = N_{on} - \hat{N_B} = N_{on} - \alpha N_{off}.
+\end{equation}
+Поскольку количества событий $N_{on}$ и $N_{off}$ являются результатами двух независимых измерений, можно определить дисперсию числа сигнальных событий $N_S$ как
+\begin{equation}
+\sigma^2(N_S) = \sigma^2(N_{on}) + \sigma^2 (\alpha N_{off}) =\sigma^2 (N_{on}) + \alpha^2 \sigma^2 (N_{off})
+\end{equation}
+Стандартное отклонение $N_S$ выражается как
+\begin{equation}
+\label{NsignalSTD}
+\hat{\sigma}(N_S) = \sqrt{\hat{\sigma}^2(N_{on})+\alpha^2 \hat{\sigma}^2(N_{off})} = \sqrt{N_{on}+\alpha^2 N_{off}}.
+\end{equation}
+Из формул (\ref{Nsignal}) и (\ref{NsignalSTD}) вычисляется значимость избытка в единицах $\sigma$:
+\begin{equation}
+\label{LiMaConfident}
+S = \frac{N_S}{\hat \sigma (N_S)} = \frac{N_{on} - \alpha N_{off}}{\sqrt{N_{on} + \alpha^2 N_{off}}}
+\end{equation}
 
 \subsection{Стереоскопический режим наблюдений}
-\textit{Описываем режим выделения совместных событий}
 Если ШАЛ обладает достаточными размерами для того, его излучение могут зарегистрировать два телескопа. Установки разнесены друг от друга на расстояние 300~м, которое свет проходит за 1~мкс. В центр обработки данных сигнал с MAROC3 приходит с задержкой, составляющей $t_{d1}=1{,}49$~мкс для IACT01 и $t_{d2} = 2{,}04$~мкс для IACT02. С учётом разницы, составляющей приблизительно 0{,}5~мкс, события, временные метки которых отстоят не более, чем на 2~мкс, можно считать совместными. 
 
 Для поиска совместных событий на двух телескопах применяется следующий алгоритм: 
@@ -460,13 +496,41 @@ S_{p}=A_{\text {АЦП }}-A_{P E D},
 	\caption{Распределение временных задержек между временами регистрации событий на IACT01 и IACT02}
 	\label{pic:iactDeltas}
 \end{figure}
-Подобное распределение по задержкам за осенний сезон 2020~г. наблюдения источника Dragonfly представлено на рис.~\ref{pic:iactDeltas}\afterpage{\clearpage}. Отрицательные временные задержки показывают, что первый телескоп сработал раньше второго, что соответствует действительности, т.\,к. при наблюдении за источником телескопы обращены на запад.  IACT установлен западнее второго, поэтому срабатывание происходит раньше. 
-
+Подобное распределение по задержкам за осенний сезон 2020~г. наблюдения источника Dragonfly представлено на (рис.~\ref{pic:iactDeltas}\afterpage{\clearpage}). Отрицательные временные задержки показывают, что первый телескоп сработал раньше второго, что соответствует действительности, т.\,к. при наблюдении за источником телескопы обращены на запад.  IACT установлен западнее второго, поэтому срабатывание происходит раньше. 
 
 \textit{Обосновываем методы подавления адронов по статье с ICRC}
+Методика подавления адронного фона для стереоскопической системы телескопов TAIGA-IACT описана в \cite{Grinyuk:20210M}. Выходные файлы модели CORSIKA по ШАЛ от равного количества сгенерированных с помощью Монте-Карло протонов и $\gamma$-квантов поступают на вход программы, имитирующей оптические системы соответствующих TAIGA-IACT. Записываются события, для которых выработался <<аппаратный>>  триггер, на выходе имеется список событий, зарегистрированных тем или иным IACT с сохранением информации об их энергии $E$, глубине максимума ливня $h_{max}$, зенитных и азимутальных углах прихода $\vartheta$ и $\varphi$, параметрах Хилласа. 
 
-\textit{Вводим описание нормализованной ширины}
+Первый этап подавления  адронного фона: среди $\gamma$-ливней с энергиями выше $E=10$~ТэВ 97\% сгенерированных событий прошли триггер, в то время как из протонных ливней с теми же энергиями триггер прошли только 51\%. Подразумевается, что камера направлена строго на источник, поэтому направления прихода $\gamma$-ливней сконцентрированы в узкой области в центре камеры (порядка 0{,}1$^{\circ}$), а протоны равномерно распределены по всей камере (в пределах 5$^{\circ}$), таким образом часть событий оказывается вне камеры.
 
+Затем отбрасываются события, затронувшие граничные пиксели периферийных кластеров камеры. Этот шаг приводит к подавлению 73\% оставшихся протонных событий и 18\% $\gamma$-событий. 
+
+\subsection{Определение положения источника в камере}
+Изображение события, зарегистрированного на двух камерах, приводится к одной координатной сетке \cite{HOFMANN1999135}. Главные оси эллипсов $y = a_1 x + b_1$ и $y = a_2 x + b$, которыми аппроксимируются изображения, пересекаются в точке
+\begin{equation}
+x=\frac{b_{2}-b_{1}}{a_{1}-a_{2}} \text { и } y=a_{1} x+b_{1}.
+\end{equation}
+
+Для событий, зарегистрированных, более, чем двумя телескопами, каждая пара камер вносит вклад в общую точку пересечения с весом
+\begin{equation}
+w = \frac{size_{1}+size_{2}}{\sum_{i}^{N_{t r i g}} size_{i}} \cdot \sin \theta,
+\end{equation}
+где $\theta$ --- угол между пересекающимися осями, $N_{trig}$ ---количество сработавших телескопов. Полученные точки ($x_{ij}, y_{ij}$) помещаются на двумерную гистограмму с весами $w$, результирующее положение направления прихода ливня в камере определяется как 
+\begin{align}
+&x_{\text {mean }}=\frac{1}{N_{\text {bin}}} \sum_{i}^{N_{\text {bin }}} \sum_{j}^{N_{\text {bin }}} y_{i j}, \\
+&y_{\text {mean }}=\frac{1}{N_{\text {bin}}} \sum_{j}^{N_{\text {bin }}} \sum_{i}^{N_{\text {bin }}} x_{i j},
+\end{align}
+где $N_{\text{bin}}$ --- число ячеек гистограммы, одинаковое для осей $x$ и $y$.
+
+Положение направления прихода ливня от гамма кванта восстанавливает положение источника в камере с некоторой ошибкой $\theta$. Был выбран порог на величину этой ошибки, соответствующий радиусу круга вокруг точки положения источника камере, в который попадает 68\% событий, для которых определены точки пересечения осей. В кружок с радиусом $r_{68}=0{,}2^{\circ}$ попали 40\% оставшихся с предыдущего этапа $\gamma$-событий и около 0{,}05\% адронных событий.  
+
+Изображения от ШАЛ, инициированных адроном, должны быть шире, чем от $\gamma$-квантов, т.\,к. поперечное сечение <<адронного>> ливня шире. 
+Вводится параметр \textit{нормализованной ширины}, описывающий ширину события, нормированную на сайзы изображений с разных камер с разными весами:
+\begin{equation}
+\textit{Nwidth}=\frac{1}{N_{trig}}\left[\sum_{i}^{N_{\text {trig }}} \frac{\operatorname{width}_{i}-w_{m}\left(r_{i}, \operatorname{size}_{i}\right)}{w_{M A D}\left(r_{i}, \operatorname{size}_{i}\right)}\right],
+\end{equation}
+где $\operatorname{width}_i$ --- параметр \textit{width} i-го телескопа, $w_{m}\left(r_{i}, \operatorname{size}_{i}\right)$ --- медианное значение параметра \textit{width} для событий со значением сайза $\operatorname{size}_{i}$ на i-ом телескопе и с расстоянием $r_i$ от восстановленной оси ливня до i-го телескопа, $w_{MAD}(r_i, \operatorname{size}_{i})$ --- медианное абсолютное отклонение, полученное из распределения \textit{width} для данного расстояния $r_i$ до оси ШАЛ и для данного сайза события $\operatorname{size}_{i}$. 
+Параметры $w_m$ и $w_{MAD}$ находятся из распределений соответствующих параметров для симулированных событий. Положение оси ШАЛ восстанавливается так же, как и положение пересечения главных осей изображений в камере, только в качестве координат центров эллипсов подставляются координаты телескопов в плоскости, нормальной к оси ливня. 
 \textit{Рисуем распределения по Nwidth, $\theta^2$ и совместным сайзам}
  
 \chapter{Обработка результатов}
