--- a/thesis.bib
+++ b/thesis.bib
@@ -72,5 +72,96 @@
   publisher={IOP Publishing}
 }
 
+@article{https://doi.org/10.48550/arxiv.2109.13753,
+  doi = {10.48550/ARXIV.2109.13753},  
+  url = {https://arxiv.org/abs/2109.13753},  
+  author = {Mitchell, A. M. W.},  
+  keywords = {High Energy Astrophysical Phenomena (astro-ph.HE), FOS: Physical sciences, FOS: Physical sciences},  
+  title = {Status of Ground-based and Galactic Gamma-ray Astronomy},
+    publisher = {arXiv},  
+  year = {2021},  
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
+}
+
+@ARTICLE{1983ApJ...272..317L,
+       author = {{Li}, T. -P. and {Ma}, Y. -Q.},
+        title = "{Analysis methods for results in gamma-ray astronomy.}",
+      journal = {\apj},
+     keywords = {Gamma Ray Astronomy, Statistical Analysis, Confidence Limits, Maximum Likelihood Estimates, Monte Carlo Method, Astronomy},
+         year = 1983,
+        month = sep,
+       volume = {272},
+        pages = {317-324},
+          doi = {10.1086/161295},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983ApJ...272..317L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Grinyuk:20210M,
+  author = "Grinyuk, A.  and  Postnikov, E.  and  Volchugov, Pavel  and  Astapov, I.  and  Awad, A.  and  Bezyazeekov, Pavel  and  Blank, M.  and  Borodin, A.  and  Bulan, A.  and  Brueckner, M.  and  Budnev, N.  and  Chiavassa, A.  and  Dyachok, A.  and  Gafarov, A.  and  Garmash, A.  and  Grebenyuk, V.  and  Gress, O.  and  Gress, T.  and  Grishin, O.  and  Horns, D.  and  Kalmykov, N.  and  Kindin, V.  and  Kiryuhin, S.  and  Kokoulin, R.  and  Kompaniets, K.  and  Korosteleva, E.  and  Kozhin, V.  and  Kravchenko, E.  and  Kryukov, Alexander  and  Kuzmichev, L.  and  Lagutin, A.  and  Lavrova, M.  and  Lubsandorzhiev, B.  and  Lubsandorzhiev, N.  and  Lukanov, A.  and  Lukyantsev, D.  and  Mirgazov, R.  and  Mirzoyan, R.  and  Monkhoev, R.  and  Osipova, E.  and  Pakhorukov, A.  and  Pan, A.  and  Panasyuk, M. I.  and  Pankov, L.  and  Petrukhin, A.  and  Poleschuk, V.  and  Popesku, M.  and  Popova, E.  and  Porelli, A.  and  Prosin, V.  and  Ptuskin, V.  and  Pushnin, A.  and  Raikin, R.  and  Razumov, A.  and  Rubtsov, G.  and  Ryabov, E.  and  Sagan, Y.  and  Samoliga, V.  and  Semeney, Yu.  and  Silaev, A.  and  Silaev(junior), A.  and  Sidorenkov, A.  and  Skurikhin, A.  and  Slunecka, M.  and  Sokolov, A.  and  Spiering, C.  and  Sveshnikova, L.  and  Tabolenko, V.  and  Tarashansky, B.  and  Tkachev, L.  and  Togoo, R.  and  Tluczykont, M.  and  Ushakov, N.  and  Vaidyanathan, A.  and  Volkov, N.  and  Voronin, D.  and  Wischnewski, R.  and  Zagorodnikov, A.  and  Zhurov, D.  and  Yashin, I.",
+  title = "{Stereoscopic and monoscopic operation of the five IACTs in the TAIGA experiment}",
+  doi = "10.22323/1.395.0713",
+  journal = "PoS",
+  year = 2021,
+  volume = "ICRC2021",
+  pages = "713"
+}
+
+@article{HOFMANN1999135,
+title = {Comparison of techniques to reconstruct VHE gamma-ray showers from multiple stereoscopic Cherenkov images},
+journal = {Astroparticle Physics},
+volume = {12},
+number = {3},
+pages = {135-143},
+year = {1999},
+issn = {0927-6505},
+doi = {https://doi.org/10.1016/S0927-6505(99)00084-5},
+url = {https://www.sciencedirect.com/science/article/pii/S0927650599000845},
+author = {W. Hofmann and I. Jung and A. Konopelko and H. Krawczynski and H. Lampeitl and G. Pühlhofer},
+abstract = {For air showers observed simultaneously by more than two imaging atmospheric Cherenkov telescopes, the shower geometry is overconstrained by the images and image information should be combined taking into account the quality of the images. Different algorithms are discussed and tested experimentally using data obtained from observations of Mkn 501 with the HEGRA IACT system. Most of these algorithms provide an estimate of the accuracy of the reconstruction of shower geometry on an event-by-event basis, allowing, e.g., to select higher-quality subsamples for precision measurements.}
+}
+
+@article{heaviside1889xxxix,
+  title={XXXIX. On the electromagnetic effects due to the motion of electrification through a dielectric},
+  author={Heaviside, Oliver},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={27},
+  number={167},
+  pages={324--339},
+  year={1889},
+  publisher={Taylor \& Francis}
+}
+
+@article{tyapkin1974first,
+  title={The first theoretical prediction of the radiation discovered by Vavilov and Cerenkov},
+  author={Tyapkin, AA},
+  journal={Soviet Physics Uspekhi},
+  volume={17},
+  number={2},
+  pages={288},
+  year={1974},
+  publisher={IOP Publishing}
+}
+
+@article{mirzoyan2014brief,
+  title={Brief history of ground-based very high energy gamma-ray astrophysics with atmospheric air Cherenkov telescopes},
+  author={Mirzoyan, Razmik},
+  journal={Astroparticle Physics},
+  volume={53},
+  pages={91--99},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{galbraith1953light,
+  title={Light pulses from the night sky associated with cosmic rays},
+  author={Galbraith, W and Jelley, JV},
+  journal={Nature},
+  volume={171},
+  number={4347},
+  pages={349--350},
+  year={1953},
+  publisher={Nature Publishing Group}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
