Дописал стереоскопию, выкладываю в оверлиф

--- a/main.tex
+++ b/main.tex
@@ -498,7 +498,6 @@ S = \frac{N_S}{\hat \sigma (N_S)} = \frac{N_{on} - \alpha N_{off}}{\sqrt{N_{on} 
 \end{figure}
 Подобное распределение по задержкам за осенний сезон 2020~г. наблюдения источника Dragonfly представлено на (рис.~\ref{pic:iactDeltas}\afterpage{\clearpage}). Отрицательные временные задержки показывают, что первый телескоп сработал раньше второго, что соответствует действительности, т.\,к. при наблюдении за источником телескопы обращены на запад.  IACT установлен западнее второго, поэтому срабатывание происходит раньше. 
 
-\textit{Обосновываем методы подавления адронов по статье с ICRC}
 Методика подавления адронного фона для стереоскопической системы телескопов TAIGA-IACT описана в \cite{Grinyuk:20210M}. Выходные файлы модели CORSIKA по ШАЛ от равного количества сгенерированных с помощью Монте-Карло протонов и $\gamma$-квантов поступают на вход программы, имитирующей оптические системы соответствующих TAIGA-IACT. Записываются события, для которых выработался <<аппаратный>>  триггер, на выходе имеется список событий, зарегистрированных тем или иным IACT с сохранением информации об их энергии $E$, глубине максимума ливня $h_{max}$, зенитных и азимутальных углах прихода $\vartheta$ и $\varphi$, параметрах Хилласа. 
 
 Первый этап подавления  адронного фона: среди $\gamma$-ливней с энергиями выше $E=10$~ТэВ 97\% сгенерированных событий прошли триггер, в то время как из протонных ливней с теми же энергиями триггер прошли только 51\%. Подразумевается, что камера направлена строго на источник, поэтому направления прихода $\gamma$-ливней сконцентрированы в узкой области в центре камеры (порядка 0{,}1$^{\circ}$), а протоны равномерно распределены по всей камере (в пределах 5$^{\circ}$), таким образом часть событий оказывается вне камеры.
@@ -531,8 +530,27 @@ w = \frac{size_{1}+size_{2}}{\sum_{i}^{N_{t r i g}} size_{i}} \cdot \sin \theta,
 \end{equation}
 где $\operatorname{width}_i$ --- параметр \textit{width} i-го телескопа, $w_{m}\left(r_{i}, \operatorname{size}_{i}\right)$ --- медианное значение параметра \textit{width} для событий со значением сайза $\operatorname{size}_{i}$ на i-ом телескопе и с расстоянием $r_i$ от восстановленной оси ливня до i-го телескопа, $w_{MAD}(r_i, \operatorname{size}_{i})$ --- медианное абсолютное отклонение, полученное из распределения \textit{width} для данного расстояния $r_i$ до оси ШАЛ и для данного сайза события $\operatorname{size}_{i}$. 
 Параметры $w_m$ и $w_{MAD}$ находятся из распределений соответствующих параметров для симулированных событий. Положение оси ШАЛ восстанавливается так же, как и положение пересечения главных осей изображений в камере, только в качестве координат центров эллипсов подставляются координаты телескопов в плоскости, нормальной к оси ливня. 
-\textit{Рисуем распределения по Nwidth, $\theta^2$ и совместным сайзам}
+
+\begin{figure}[t]
+	\noindent\centering{
+		\includegraphics[width=0.6\textwidth]{figs/theta2dist.png}
+	}
+	\caption{Распределение квадрата ошибки определения источника $\theta^2$}
+	\label{pic:theta2dist}
+\end{figure}
+\begin{figure}[b]
+	\noindent\centering{
+		\includegraphics[width=0.6\textwidth]{figs/nwidthdist.png}
+	}
+	\caption{Распределение нормализованной длины}
+	\label{pic:nwidthdist}
+\end{figure}
  
+На (рис.~\ref{pic:theta2dist}\afterpage{\clearpage}) и (рис.~\ref{pic:nwidthdist}\afterpage{\clearpage}) представлены распределения описанных выше параметров, по которым можно проводить разделение адронных событий и событий от $\gamma$-квантов.
+
+ $\theta$ --- длина разности между положением источника в камере и восстановленной осью ливня. Число гамма-событий, по которым неверно восстановлено положение наблюдаемого источника, падает с ростом ошибки. Источники адронных событий (а значит, и реальных экспериментальных данных, состоящих почти только из адронных событий) равномерно распределены по всей камере, как и квадрат ошибки $\theta^2$.
+
+Как сказано выше, изображения гамма-событий должны быть yже, чем изображения адронных событий. Распределение нормализованной ширины гамма-событий смещено влево относительно средних ширин с соответствующими сайзами. 
 \chapter{Обработка результатов}
 \textit{Будут представлены полученные результаты с помощью двух алгоритмов. }
 \phantomsection
